kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision7.sem

interface Bar.Adapter {
  a(): Integer
}

interface Bar {
  b(): Integer
}
